@@ -2,7 +2,7 @@
 # comment out snap if building a real release
 %define name torque
 %define version 2.1.0p0
-%define snap 200602171954
+%define snap 200602172052
 %define release 1cri
 
 # The following options are supported:
